etsinf3/AIC/Practicas/pract3/solucion/input.yacc.output
Terminals unused in grammar

    FORM_REG_FF
    FORM_REG_R_FP
    FORM_REG_FP_R


Grammar

    0 $accept: r_inicio $end

    1 $@1: %empty

    2 r_inicio: LABEL $@1 r_linea_ensamblador
    3         | r_linea_ensamblador
    4         | %empty

    5 $@2: %empty

    6 r_linea_ensamblador: r_directiva NL $@2 r_inicio

    7 $@3: %empty

    8 r_linea_ensamblador: r_instruccion NL $@3 r_inicio
    9                    | NL r_inicio
   10                    | r_directiva
   11                    | r_instruccion

   12 r_directiva: DE_DATA
   13            | DE_TEXT

   14 $@4: %empty

   15 r_directiva: DE_BYTE $@4 r_lista_enteros

   16 $@5: %empty

   17 r_directiva: DE_HALF $@5 r_lista_enteros

   18 $@6: %empty

   19 r_directiva: DE_WORD $@6 r_lista_enteros

   20 $@7: %empty

   21 r_directiva: DE_DWORD $@7 r_lista_enteros

   22 $@8: %empty

   23 r_directiva: DE_FLOAT $@8 r_lista_reales

   24 $@9: %empty

   25 r_directiva: DE_DOUBLE $@9 r_lista_reales
   26            | DE_PC T_INT_LIT
   27            | DE_SPACE T_INT_LIT
   28            | DE_ASCIIZ T_STRING
   29            | DE_IREG r_valores_enteros
   30            | DE_FREG r_valores_fp
   31            | DE_BTB r_valores_btb

   32 $@10: %empty

   33 r_lista_enteros: T_INT_LIT $@10 r_lista_enteros_cont

   34 r_lista_enteros_cont: ',' r_lista_enteros
   35                     | %empty

   36 $@11: %empty

   37 r_lista_reales: T_FP_LIT $@11 r_lista_reales_cont

   38 $@12: %empty

   39 r_lista_reales: T_INT_LIT $@12 r_lista_reales_cont

   40 r_lista_reales_cont: ',' r_lista_reales
   41                    | %empty

   42 $@13: %empty

   43 r_valores_enteros: T_INT_LIT $@13 r_valores_enteros_cont

   44 r_valores_enteros_cont: ',' r_valores_enteros
   45                       | %empty

   46 $@14: %empty

   47 r_valores_fp: T_FP_LIT $@14 r_valores_fp_cont

   48 r_valores_fp_cont: ',' r_valores_fp
   49                  | %empty

   50 $@15: %empty

   51 r_valores_btb: T_INT_LIT $@15 r_valores_btb_cont

   52 r_valores_btb_cont: ',' r_valores_btb
   53                   | %empty

   54 r_inmediato: T_INT_LIT
   55            | T_ALPHANUM

   56 r_posicion: T_INT_LIT
   57           | T_ALPHANUM

   58 r_instruccion: INST_NOP
   59              | INST_SYSCALL
   60              | FORM_INM_L REG_INT ',' r_inmediato '(' REG_INT ')'
   61              | FORM_INM_FP_L REG_FP ',' r_inmediato '(' REG_INT ')'
   62              | FORM_INM_S REG_INT ',' r_inmediato '(' REG_INT ')'
   63              | FORM_INM_FP_S REG_FP ',' r_inmediato '(' REG_INT ')'
   64              | FORM_REG REG_INT ',' REG_INT ',' REG_INT
   65              | FORM_FP_REG REG_FP ',' REG_FP ',' REG_FP
   66              | FORM_FP_REG_DF REG_FP ',' REG_FP
   67              | FORM_REG REG_INT ',' REG_INT ',' r_inmediato
   68              | FORM_INM REG_INT ',' REG_INT ',' r_inmediato
   69              | FORM_INM_T T_INT_LIT
   70              | FORM_INM_DI REG_INT ',' T_INT_LIT
   71              | FORM_FP_REG_FF REG_FP ',' REG_FP
   72              | FORM_INM_B_FI REG_INT ',' r_posicion
   73              | FORM_INM_B_FFI REG_INT ',' REG_INT ',' r_posicion
   74              | FORM_INM_B r_posicion
   75              | FORM_J r_posicion
   76              | FORM_J_F REG_INT
   77              | INST_RET


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 60 61 62 63
    ')' (41) 60 61 62 63
    ',' (44) 34 40 44 48 52 60 61 62 63 64 65 66 67 68 70 71 72 73
    error (256)
    NL <ivalue> (258) 6 8 9
    T_INT_LIT <ivalue> (259) 26 27 33 39 43 51 54 56 69 70
    T_FP_LIT <fvalue> (260) 37 47
    T_ALPHANUM <cvalue> (261) 55 57
    T_STRING <cvalue> (262) 28
    REG_INT <ivalue> (263) 60 61 62 63 64 67 68 70 72 73 76
    REG_FP <ivalue> (264) 61 63 65 66 71
    DE_DATA <ivalue> (265) 12
    DE_TEXT <ivalue> (266) 13
    DE_SPACE <ivalue> (267) 27
    DE_IREG <ivalue> (268) 29
    DE_FREG <ivalue> (269) 30
    DE_ASCIIZ <ivalue> (270) 28
    DE_BTB <ivalue> (271) 31
    DE_PC <ivalue> (272) 26
    DE_BYTE <ivalue> (273) 15
    DE_HALF <ivalue> (274) 17
    DE_WORD <ivalue> (275) 19
    DE_DWORD <ivalue> (276) 21
    DE_FLOAT <ivalue> (277) 23
    DE_DOUBLE <ivalue> (278) 25
    FORM_INM <ivalue> (279) 68
    FORM_INM_L <ivalue> (280) 60
    FORM_INM_S <ivalue> (281) 62
    FORM_INM_DI <ivalue> (282) 70
    FORM_INM_B <ivalue> (283) 74
    FORM_INM_B_FI <ivalue> (284) 72
    FORM_INM_B_FFI <ivalue> (285) 73
    FORM_INM_T <ivalue> (286) 69
    INST_NOP <ivalue> (287) 58
    INST_RET <ivalue> (288) 77
    INST_SYSCALL <ivalue> (289) 59
    FORM_REG <ivalue> (290) 64 67
    FORM_REG_FF <ivalue> (291)
    FORM_INM_FP_L <ivalue> (292) 61
    FORM_INM_FP_S <ivalue> (293) 63
    FORM_FP_REG <ivalue> (294) 65
    FORM_FP_REG_FF <ivalue> (295) 71
    FORM_FP_REG_DF <ivalue> (296) 66
    FORM_REG_R_FP <ivalue> (297)
    FORM_REG_FP_R <ivalue> (298)
    FORM_J <ivalue> (299) 75
    FORM_J_F <ivalue> (300) 76
    LABEL <cvalue> (301) 2


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    r_inicio (51)
        on left: 2 3 4
        on right: 0 6 8 9
    $@1 (52)
        on left: 1
        on right: 2
    r_linea_ensamblador (53)
        on left: 6 8 9 10 11
        on right: 2 3
    $@2 (54)
        on left: 5
        on right: 6
    $@3 (55)
        on left: 7
        on right: 8
    r_directiva (56)
        on left: 12 13 15 17 19 21 23 25 26 27 28 29 30 31
        on right: 6 10
    $@4 (57)
        on left: 14
        on right: 15
    $@5 (58)
        on left: 16
        on right: 17
    $@6 (59)
        on left: 18
        on right: 19
    $@7 (60)
        on left: 20
        on right: 21
    $@8 (61)
        on left: 22
        on right: 23
    $@9 (62)
        on left: 24
        on right: 25
    r_lista_enteros (63)
        on left: 33
        on right: 15 17 19 21 34
    $@10 (64)
        on left: 32
        on right: 33
    r_lista_enteros_cont (65)
        on left: 34 35
        on right: 33
    r_lista_reales (66)
        on left: 37 39
        on right: 23 25 40
    $@11 (67)
        on left: 36
        on right: 37
    $@12 (68)
        on left: 38
        on right: 39
    r_lista_reales_cont (69)
        on left: 40 41
        on right: 37 39
    r_valores_enteros (70)
        on left: 43
        on right: 29 44
    $@13 (71)
        on left: 42
        on right: 43
    r_valores_enteros_cont (72)
        on left: 44 45
        on right: 43
    r_valores_fp (73)
        on left: 47
        on right: 30 48
    $@14 (74)
        on left: 46
        on right: 47
    r_valores_fp_cont (75)
        on left: 48 49
        on right: 47
    r_valores_btb (76)
        on left: 51
        on right: 31 52
    $@15 (77)
        on left: 50
        on right: 51
    r_valores_btb_cont (78)
        on left: 52 53
        on right: 51
    r_inmediato <ivalue> (79)
        on left: 54 55
        on right: 60 61 62 63 67 68
    r_posicion <ivalue> (80)
        on left: 56 57
        on right: 72 73 74 75
    r_instruccion (81)
        on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 8 11


State 0

    0 $accept: . r_inicio $end

    NL              shift, and go to state 1
    DE_DATA         shift, and go to state 2
    DE_TEXT         shift, and go to state 3
    DE_SPACE        shift, and go to state 4
    DE_IREG         shift, and go to state 5
    DE_FREG         shift, and go to state 6
    DE_ASCIIZ       shift, and go to state 7
    DE_BTB          shift, and go to state 8
    DE_PC           shift, and go to state 9
    DE_BYTE         shift, and go to state 10
    DE_HALF         shift, and go to state 11
    DE_WORD         shift, and go to state 12
    DE_DWORD        shift, and go to state 13
    DE_FLOAT        shift, and go to state 14
    DE_DOUBLE       shift, and go to state 15
    FORM_INM        shift, and go to state 16
    FORM_INM_L      shift, and go to state 17
    FORM_INM_S      shift, and go to state 18
    FORM_INM_DI     shift, and go to state 19
    FORM_INM_B      shift, and go to state 20
    FORM_INM_B_FI   shift, and go to state 21
    FORM_INM_B_FFI  shift, and go to state 22
    FORM_INM_T      shift, and go to state 23
    INST_NOP        shift, and go to state 24
    INST_RET        shift, and go to state 25
    INST_SYSCALL    shift, and go to state 26
    FORM_REG        shift, and go to state 27
    FORM_INM_FP_L   shift, and go to state 28
    FORM_INM_FP_S   shift, and go to state 29
    FORM_FP_REG     shift, and go to state 30
    FORM_FP_REG_FF  shift, and go to state 31
    FORM_FP_REG_DF  shift, and go to state 32
    FORM_J          shift, and go to state 33
    FORM_J_F        shift, and go to state 34
    LABEL           shift, and go to state 35

    $default  reduce using rule 4 (r_inicio)

    r_inicio             go to state 36
    r_linea_ensamblador  go to state 37
    r_directiva          go to state 38
    r_instruccion        go to state 39


State 1

    9 r_linea_ensamblador: NL . r_inicio

    NL              shift, and go to state 1
    DE_DATA         shift, and go to state 2
    DE_TEXT         shift, and go to state 3
    DE_SPACE        shift, and go to state 4
    DE_IREG         shift, and go to state 5
    DE_FREG         shift, and go to state 6
    DE_ASCIIZ       shift, and go to state 7
    DE_BTB          shift, and go to state 8
    DE_PC           shift, and go to state 9
    DE_BYTE         shift, and go to state 10
    DE_HALF         shift, and go to state 11
    DE_WORD         shift, and go to state 12
    DE_DWORD        shift, and go to state 13
    DE_FLOAT        shift, and go to state 14
    DE_DOUBLE       shift, and go to state 15
    FORM_INM        shift, and go to state 16
    FORM_INM_L      shift, and go to state 17
    FORM_INM_S      shift, and go to state 18
    FORM_INM_DI     shift, and go to state 19
    FORM_INM_B      shift, and go to state 20
    FORM_INM_B_FI   shift, and go to state 21
    FORM_INM_B_FFI  shift, and go to state 22
    FORM_INM_T      shift, and go to state 23
    INST_NOP        shift, and go to state 24
    INST_RET        shift, and go to state 25
    INST_SYSCALL    shift, and go to state 26
    FORM_REG        shift, and go to state 27
    FORM_INM_FP_L   shift, and go to state 28
    FORM_INM_FP_S   shift, and go to state 29
    FORM_FP_REG     shift, and go to state 30
    FORM_FP_REG_FF  shift, and go to state 31
    FORM_FP_REG_DF  shift, and go to state 32
    FORM_J          shift, and go to state 33
    FORM_J_F        shift, and go to state 34
    LABEL           shift, and go to state 35

    $default  reduce using rule 4 (r_inicio)

    r_inicio             go to state 40
    r_linea_ensamblador  go to state 37
    r_directiva          go to state 38
    r_instruccion        go to state 39


State 2

   12 r_directiva: DE_DATA .

    $default  reduce using rule 12 (r_directiva)


State 3

   13 r_directiva: DE_TEXT .

    $default  reduce using rule 13 (r_directiva)


State 4

   27 r_directiva: DE_SPACE . T_INT_LIT

    T_INT_LIT  shift, and go to state 41


State 5

   29 r_directiva: DE_IREG . r_valores_enteros

    T_INT_LIT  shift, and go to state 42

    r_valores_enteros  go to state 43


State 6

   30 r_directiva: DE_FREG . r_valores_fp

    T_FP_LIT  shift, and go to state 44

    r_valores_fp  go to state 45


State 7

   28 r_directiva: DE_ASCIIZ . T_STRING

    T_STRING  shift, and go to state 46


State 8

   31 r_directiva: DE_BTB . r_valores_btb

    T_INT_LIT  shift, and go to state 47

    r_valores_btb  go to state 48


State 9

   26 r_directiva: DE_PC . T_INT_LIT

    T_INT_LIT  shift, and go to state 49


State 10

   15 r_directiva: DE_BYTE . $@4 r_lista_enteros

    $default  reduce using rule 14 ($@4)

    $@4  go to state 50


State 11

   17 r_directiva: DE_HALF . $@5 r_lista_enteros

    $default  reduce using rule 16 ($@5)

    $@5  go to state 51


State 12

   19 r_directiva: DE_WORD . $@6 r_lista_enteros

    $default  reduce using rule 18 ($@6)

    $@6  go to state 52


State 13

   21 r_directiva: DE_DWORD . $@7 r_lista_enteros

    $default  reduce using rule 20 ($@7)

    $@7  go to state 53


State 14

   23 r_directiva: DE_FLOAT . $@8 r_lista_reales

    $default  reduce using rule 22 ($@8)

    $@8  go to state 54


State 15

   25 r_directiva: DE_DOUBLE . $@9 r_lista_reales

    $default  reduce using rule 24 ($@9)

    $@9  go to state 55


State 16

   68 r_instruccion: FORM_INM . REG_INT ',' REG_INT ',' r_inmediato

    REG_INT  shift, and go to state 56


State 17

   60 r_instruccion: FORM_INM_L . REG_INT ',' r_inmediato '(' REG_INT ')'

    REG_INT  shift, and go to state 57


State 18

   62 r_instruccion: FORM_INM_S . REG_INT ',' r_inmediato '(' REG_INT ')'

    REG_INT  shift, and go to state 58


State 19

   70 r_instruccion: FORM_INM_DI . REG_INT ',' T_INT_LIT

    REG_INT  shift, and go to state 59


State 20

   74 r_instruccion: FORM_INM_B . r_posicion

    T_INT_LIT   shift, and go to state 60
    T_ALPHANUM  shift, and go to state 61

    r_posicion  go to state 62


State 21

   72 r_instruccion: FORM_INM_B_FI . REG_INT ',' r_posicion

    REG_INT  shift, and go to state 63


State 22

   73 r_instruccion: FORM_INM_B_FFI . REG_INT ',' REG_INT ',' r_posicion

    REG_INT  shift, and go to state 64


State 23

   69 r_instruccion: FORM_INM_T . T_INT_LIT

    T_INT_LIT  shift, and go to state 65


State 24

   58 r_instruccion: INST_NOP .

    $default  reduce using rule 58 (r_instruccion)


State 25

   77 r_instruccion: INST_RET .

    $default  reduce using rule 77 (r_instruccion)


State 26

   59 r_instruccion: INST_SYSCALL .

    $default  reduce using rule 59 (r_instruccion)


State 27

   64 r_instruccion: FORM_REG . REG_INT ',' REG_INT ',' REG_INT
   67              | FORM_REG . REG_INT ',' REG_INT ',' r_inmediato

    REG_INT  shift, and go to state 66


State 28

   61 r_instruccion: FORM_INM_FP_L . REG_FP ',' r_inmediato '(' REG_INT ')'

    REG_FP  shift, and go to state 67


State 29

   63 r_instruccion: FORM_INM_FP_S . REG_FP ',' r_inmediato '(' REG_INT ')'

    REG_FP  shift, and go to state 68


State 30

   65 r_instruccion: FORM_FP_REG . REG_FP ',' REG_FP ',' REG_FP

    REG_FP  shift, and go to state 69


State 31

   71 r_instruccion: FORM_FP_REG_FF . REG_FP ',' REG_FP

    REG_FP  shift, and go to state 70


State 32

   66 r_instruccion: FORM_FP_REG_DF . REG_FP ',' REG_FP

    REG_FP  shift, and go to state 71


State 33

   75 r_instruccion: FORM_J . r_posicion

    T_INT_LIT   shift, and go to state 60
    T_ALPHANUM  shift, and go to state 61

    r_posicion  go to state 72


State 34

   76 r_instruccion: FORM_J_F . REG_INT

    REG_INT  shift, and go to state 73


State 35

    2 r_inicio: LABEL . $@1 r_linea_ensamblador

    $default  reduce using rule 1 ($@1)

    $@1  go to state 74


State 36

    0 $accept: r_inicio . $end

    $end  shift, and go to state 75


State 37

    3 r_inicio: r_linea_ensamblador .

    $default  reduce using rule 3 (r_inicio)


State 38

    6 r_linea_ensamblador: r_directiva . NL $@2 r_inicio
   10                    | r_directiva .

    NL  shift, and go to state 76

    $default  reduce using rule 10 (r_linea_ensamblador)


State 39

    8 r_linea_ensamblador: r_instruccion . NL $@3 r_inicio
   11                    | r_instruccion .

    NL  shift, and go to state 77

    $default  reduce using rule 11 (r_linea_ensamblador)


State 40

    9 r_linea_ensamblador: NL r_inicio .

    $default  reduce using rule 9 (r_linea_ensamblador)


State 41

   27 r_directiva: DE_SPACE T_INT_LIT .

    $default  reduce using rule 27 (r_directiva)


State 42

   43 r_valores_enteros: T_INT_LIT . $@13 r_valores_enteros_cont

    $default  reduce using rule 42 ($@13)

    $@13  go to state 78


State 43

   29 r_directiva: DE_IREG r_valores_enteros .

    $default  reduce using rule 29 (r_directiva)


State 44

   47 r_valores_fp: T_FP_LIT . $@14 r_valores_fp_cont

    $default  reduce using rule 46 ($@14)

    $@14  go to state 79


State 45

   30 r_directiva: DE_FREG r_valores_fp .

    $default  reduce using rule 30 (r_directiva)


State 46

   28 r_directiva: DE_ASCIIZ T_STRING .

    $default  reduce using rule 28 (r_directiva)


State 47

   51 r_valores_btb: T_INT_LIT . $@15 r_valores_btb_cont

    $default  reduce using rule 50 ($@15)

    $@15  go to state 80


State 48

   31 r_directiva: DE_BTB r_valores_btb .

    $default  reduce using rule 31 (r_directiva)


State 49

   26 r_directiva: DE_PC T_INT_LIT .

    $default  reduce using rule 26 (r_directiva)


State 50

   15 r_directiva: DE_BYTE $@4 . r_lista_enteros

    T_INT_LIT  shift, and go to state 81

    r_lista_enteros  go to state 82


State 51

   17 r_directiva: DE_HALF $@5 . r_lista_enteros

    T_INT_LIT  shift, and go to state 81

    r_lista_enteros  go to state 83


State 52

   19 r_directiva: DE_WORD $@6 . r_lista_enteros

    T_INT_LIT  shift, and go to state 81

    r_lista_enteros  go to state 84


State 53

   21 r_directiva: DE_DWORD $@7 . r_lista_enteros

    T_INT_LIT  shift, and go to state 81

    r_lista_enteros  go to state 85


State 54

   23 r_directiva: DE_FLOAT $@8 . r_lista_reales

    T_INT_LIT  shift, and go to state 86
    T_FP_LIT   shift, and go to state 87

    r_lista_reales  go to state 88


State 55

   25 r_directiva: DE_DOUBLE $@9 . r_lista_reales

    T_INT_LIT  shift, and go to state 86
    T_FP_LIT   shift, and go to state 87

    r_lista_reales  go to state 89


State 56

   68 r_instruccion: FORM_INM REG_INT . ',' REG_INT ',' r_inmediato

    ','  shift, and go to state 90


State 57

   60 r_instruccion: FORM_INM_L REG_INT . ',' r_inmediato '(' REG_INT ')'

    ','  shift, and go to state 91


State 58

   62 r_instruccion: FORM_INM_S REG_INT . ',' r_inmediato '(' REG_INT ')'

    ','  shift, and go to state 92


State 59

   70 r_instruccion: FORM_INM_DI REG_INT . ',' T_INT_LIT

    ','  shift, and go to state 93


State 60

   56 r_posicion: T_INT_LIT .

    $default  reduce using rule 56 (r_posicion)


State 61

   57 r_posicion: T_ALPHANUM .

    $default  reduce using rule 57 (r_posicion)


State 62

   74 r_instruccion: FORM_INM_B r_posicion .

    $default  reduce using rule 74 (r_instruccion)


State 63

   72 r_instruccion: FORM_INM_B_FI REG_INT . ',' r_posicion

    ','  shift, and go to state 94


State 64

   73 r_instruccion: FORM_INM_B_FFI REG_INT . ',' REG_INT ',' r_posicion

    ','  shift, and go to state 95


State 65

   69 r_instruccion: FORM_INM_T T_INT_LIT .

    $default  reduce using rule 69 (r_instruccion)


State 66

   64 r_instruccion: FORM_REG REG_INT . ',' REG_INT ',' REG_INT
   67              | FORM_REG REG_INT . ',' REG_INT ',' r_inmediato

    ','  shift, and go to state 96


State 67

   61 r_instruccion: FORM_INM_FP_L REG_FP . ',' r_inmediato '(' REG_INT ')'

    ','  shift, and go to state 97


State 68

   63 r_instruccion: FORM_INM_FP_S REG_FP . ',' r_inmediato '(' REG_INT ')'

    ','  shift, and go to state 98


State 69

   65 r_instruccion: FORM_FP_REG REG_FP . ',' REG_FP ',' REG_FP

    ','  shift, and go to state 99


State 70

   71 r_instruccion: FORM_FP_REG_FF REG_FP . ',' REG_FP

    ','  shift, and go to state 100


State 71

   66 r_instruccion: FORM_FP_REG_DF REG_FP . ',' REG_FP

    ','  shift, and go to state 101


State 72

   75 r_instruccion: FORM_J r_posicion .

    $default  reduce using rule 75 (r_instruccion)


State 73

   76 r_instruccion: FORM_J_F REG_INT .

    $default  reduce using rule 76 (r_instruccion)


State 74

    2 r_inicio: LABEL $@1 . r_linea_ensamblador

    NL              shift, and go to state 1
    DE_DATA         shift, and go to state 2
    DE_TEXT         shift, and go to state 3
    DE_SPACE        shift, and go to state 4
    DE_IREG         shift, and go to state 5
    DE_FREG         shift, and go to state 6
    DE_ASCIIZ       shift, and go to state 7
    DE_BTB          shift, and go to state 8
    DE_PC           shift, and go to state 9
    DE_BYTE         shift, and go to state 10
    DE_HALF         shift, and go to state 11
    DE_WORD         shift, and go to state 12
    DE_DWORD        shift, and go to state 13
    DE_FLOAT        shift, and go to state 14
    DE_DOUBLE       shift, and go to state 15
    FORM_INM        shift, and go to state 16
    FORM_INM_L      shift, and go to state 17
    FORM_INM_S      shift, and go to state 18
    FORM_INM_DI     shift, and go to state 19
    FORM_INM_B      shift, and go to state 20
    FORM_INM_B_FI   shift, and go to state 21
    FORM_INM_B_FFI  shift, and go to state 22
    FORM_INM_T      shift, and go to state 23
    INST_NOP        shift, and go to state 24
    INST_RET        shift, and go to state 25
    INST_SYSCALL    shift, and go to state 26
    FORM_REG        shift, and go to state 27
    FORM_INM_FP_L   shift, and go to state 28
    FORM_INM_FP_S   shift, and go to state 29
    FORM_FP_REG     shift, and go to state 30
    FORM_FP_REG_FF  shift, and go to state 31
    FORM_FP_REG_DF  shift, and go to state 32
    FORM_J          shift, and go to state 33
    FORM_J_F        shift, and go to state 34

    r_linea_ensamblador  go to state 102
    r_directiva          go to state 38
    r_instruccion        go to state 39


State 75

    0 $accept: r_inicio $end .

    $default  accept


State 76

    6 r_linea_ensamblador: r_directiva NL . $@2 r_inicio

    $default  reduce using rule 5 ($@2)

    $@2  go to state 103


State 77

    8 r_linea_ensamblador: r_instruccion NL . $@3 r_inicio

    $default  reduce using rule 7 ($@3)

    $@3  go to state 104


State 78

   43 r_valores_enteros: T_INT_LIT $@13 . r_valores_enteros_cont

    ','  shift, and go to state 105

    $default  reduce using rule 45 (r_valores_enteros_cont)

    r_valores_enteros_cont  go to state 106


State 79

   47 r_valores_fp: T_FP_LIT $@14 . r_valores_fp_cont

    ','  shift, and go to state 107

    $default  reduce using rule 49 (r_valores_fp_cont)

    r_valores_fp_cont  go to state 108


State 80

   51 r_valores_btb: T_INT_LIT $@15 . r_valores_btb_cont

    ','  shift, and go to state 109

    $default  reduce using rule 53 (r_valores_btb_cont)

    r_valores_btb_cont  go to state 110


State 81

   33 r_lista_enteros: T_INT_LIT . $@10 r_lista_enteros_cont

    $default  reduce using rule 32 ($@10)

    $@10  go to state 111


State 82

   15 r_directiva: DE_BYTE $@4 r_lista_enteros .

    $default  reduce using rule 15 (r_directiva)


State 83

   17 r_directiva: DE_HALF $@5 r_lista_enteros .

    $default  reduce using rule 17 (r_directiva)


State 84

   19 r_directiva: DE_WORD $@6 r_lista_enteros .

    $default  reduce using rule 19 (r_directiva)


State 85

   21 r_directiva: DE_DWORD $@7 r_lista_enteros .

    $default  reduce using rule 21 (r_directiva)


State 86

   39 r_lista_reales: T_INT_LIT . $@12 r_lista_reales_cont

    $default  reduce using rule 38 ($@12)

    $@12  go to state 112


State 87

   37 r_lista_reales: T_FP_LIT . $@11 r_lista_reales_cont

    $default  reduce using rule 36 ($@11)

    $@11  go to state 113


State 88

   23 r_directiva: DE_FLOAT $@8 r_lista_reales .

    $default  reduce using rule 23 (r_directiva)


State 89

   25 r_directiva: DE_DOUBLE $@9 r_lista_reales .

    $default  reduce using rule 25 (r_directiva)


State 90

   68 r_instruccion: FORM_INM REG_INT ',' . REG_INT ',' r_inmediato

    REG_INT  shift, and go to state 114


State 91

   60 r_instruccion: FORM_INM_L REG_INT ',' . r_inmediato '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 115
    T_ALPHANUM  shift, and go to state 116

    r_inmediato  go to state 117


State 92

   62 r_instruccion: FORM_INM_S REG_INT ',' . r_inmediato '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 115
    T_ALPHANUM  shift, and go to state 116

    r_inmediato  go to state 118


State 93

   70 r_instruccion: FORM_INM_DI REG_INT ',' . T_INT_LIT

    T_INT_LIT  shift, and go to state 119


State 94

   72 r_instruccion: FORM_INM_B_FI REG_INT ',' . r_posicion

    T_INT_LIT   shift, and go to state 60
    T_ALPHANUM  shift, and go to state 61

    r_posicion  go to state 120


State 95

   73 r_instruccion: FORM_INM_B_FFI REG_INT ',' . REG_INT ',' r_posicion

    REG_INT  shift, and go to state 121


State 96

   64 r_instruccion: FORM_REG REG_INT ',' . REG_INT ',' REG_INT
   67              | FORM_REG REG_INT ',' . REG_INT ',' r_inmediato

    REG_INT  shift, and go to state 122


State 97

   61 r_instruccion: FORM_INM_FP_L REG_FP ',' . r_inmediato '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 115
    T_ALPHANUM  shift, and go to state 116

    r_inmediato  go to state 123


State 98

   63 r_instruccion: FORM_INM_FP_S REG_FP ',' . r_inmediato '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 115
    T_ALPHANUM  shift, and go to state 116

    r_inmediato  go to state 124


State 99

   65 r_instruccion: FORM_FP_REG REG_FP ',' . REG_FP ',' REG_FP

    REG_FP  shift, and go to state 125


State 100

   71 r_instruccion: FORM_FP_REG_FF REG_FP ',' . REG_FP

    REG_FP  shift, and go to state 126


State 101

   66 r_instruccion: FORM_FP_REG_DF REG_FP ',' . REG_FP

    REG_FP  shift, and go to state 127


State 102

    2 r_inicio: LABEL $@1 r_linea_ensamblador .

    $default  reduce using rule 2 (r_inicio)


State 103

    6 r_linea_ensamblador: r_directiva NL $@2 . r_inicio

    NL              shift, and go to state 1
    DE_DATA         shift, and go to state 2
    DE_TEXT         shift, and go to state 3
    DE_SPACE        shift, and go to state 4
    DE_IREG         shift, and go to state 5
    DE_FREG         shift, and go to state 6
    DE_ASCIIZ       shift, and go to state 7
    DE_BTB          shift, and go to state 8
    DE_PC           shift, and go to state 9
    DE_BYTE         shift, and go to state 10
    DE_HALF         shift, and go to state 11
    DE_WORD         shift, and go to state 12
    DE_DWORD        shift, and go to state 13
    DE_FLOAT        shift, and go to state 14
    DE_DOUBLE       shift, and go to state 15
    FORM_INM        shift, and go to state 16
    FORM_INM_L      shift, and go to state 17
    FORM_INM_S      shift, and go to state 18
    FORM_INM_DI     shift, and go to state 19
    FORM_INM_B      shift, and go to state 20
    FORM_INM_B_FI   shift, and go to state 21
    FORM_INM_B_FFI  shift, and go to state 22
    FORM_INM_T      shift, and go to state 23
    INST_NOP        shift, and go to state 24
    INST_RET        shift, and go to state 25
    INST_SYSCALL    shift, and go to state 26
    FORM_REG        shift, and go to state 27
    FORM_INM_FP_L   shift, and go to state 28
    FORM_INM_FP_S   shift, and go to state 29
    FORM_FP_REG     shift, and go to state 30
    FORM_FP_REG_FF  shift, and go to state 31
    FORM_FP_REG_DF  shift, and go to state 32
    FORM_J          shift, and go to state 33
    FORM_J_F        shift, and go to state 34
    LABEL           shift, and go to state 35

    $default  reduce using rule 4 (r_inicio)

    r_inicio             go to state 128
    r_linea_ensamblador  go to state 37
    r_directiva          go to state 38
    r_instruccion        go to state 39


State 104

    8 r_linea_ensamblador: r_instruccion NL $@3 . r_inicio

    NL              shift, and go to state 1
    DE_DATA         shift, and go to state 2
    DE_TEXT         shift, and go to state 3
    DE_SPACE        shift, and go to state 4
    DE_IREG         shift, and go to state 5
    DE_FREG         shift, and go to state 6
    DE_ASCIIZ       shift, and go to state 7
    DE_BTB          shift, and go to state 8
    DE_PC           shift, and go to state 9
    DE_BYTE         shift, and go to state 10
    DE_HALF         shift, and go to state 11
    DE_WORD         shift, and go to state 12
    DE_DWORD        shift, and go to state 13
    DE_FLOAT        shift, and go to state 14
    DE_DOUBLE       shift, and go to state 15
    FORM_INM        shift, and go to state 16
    FORM_INM_L      shift, and go to state 17
    FORM_INM_S      shift, and go to state 18
    FORM_INM_DI     shift, and go to state 19
    FORM_INM_B      shift, and go to state 20
    FORM_INM_B_FI   shift, and go to state 21
    FORM_INM_B_FFI  shift, and go to state 22
    FORM_INM_T      shift, and go to state 23
    INST_NOP        shift, and go to state 24
    INST_RET        shift, and go to state 25
    INST_SYSCALL    shift, and go to state 26
    FORM_REG        shift, and go to state 27
    FORM_INM_FP_L   shift, and go to state 28
    FORM_INM_FP_S   shift, and go to state 29
    FORM_FP_REG     shift, and go to state 30
    FORM_FP_REG_FF  shift, and go to state 31
    FORM_FP_REG_DF  shift, and go to state 32
    FORM_J          shift, and go to state 33
    FORM_J_F        shift, and go to state 34
    LABEL           shift, and go to state 35

    $default  reduce using rule 4 (r_inicio)

    r_inicio             go to state 129
    r_linea_ensamblador  go to state 37
    r_directiva          go to state 38
    r_instruccion        go to state 39


State 105

   44 r_valores_enteros_cont: ',' . r_valores_enteros

    T_INT_LIT  shift, and go to state 42

    r_valores_enteros  go to state 130


State 106

   43 r_valores_enteros: T_INT_LIT $@13 r_valores_enteros_cont .

    $default  reduce using rule 43 (r_valores_enteros)


State 107

   48 r_valores_fp_cont: ',' . r_valores_fp

    T_FP_LIT  shift, and go to state 44

    r_valores_fp  go to state 131


State 108

   47 r_valores_fp: T_FP_LIT $@14 r_valores_fp_cont .

    $default  reduce using rule 47 (r_valores_fp)


State 109

   52 r_valores_btb_cont: ',' . r_valores_btb

    T_INT_LIT  shift, and go to state 47

    r_valores_btb  go to state 132


State 110

   51 r_valores_btb: T_INT_LIT $@15 r_valores_btb_cont .

    $default  reduce using rule 51 (r_valores_btb)


State 111

   33 r_lista_enteros: T_INT_LIT $@10 . r_lista_enteros_cont

    ','  shift, and go to state 133

    $default  reduce using rule 35 (r_lista_enteros_cont)

    r_lista_enteros_cont  go to state 134


State 112
